--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
          <div class="form-control">
            <input type="text" v-bind:placeholder="placeholderString " v-bind:value="inputValue"
            v-on:input="inputChangeHandler"
+           v-on:keypress.enter="addNewNote"
            />
-           <h2>inputValue:{{inputValue}} </h2>
-           <button class="btn">Добавить</button>
+           <button class="btn" v-on:click="addNewNote">Добавить</button>
            <hr>
+           <ul class="list" v-if="notes.length !== 0">
+             <li class="list-item" v-for="(note, idx) in notes">
+               ({{idx +1}}) {{note}} 
+               <button class="btn danger" v-on:click="removeNote(idx)">Удалить</button>
+              </li>
+            </ul>
+            <div v-else>Заметок нет. Добавьте заметку</div>
          </div>
       </div>
     </div>
