--- a/index.html
+++ b/index.html
@@ -10,20 +10,33 @@
   <body>
     <div class="container" id="app">
       <div class="card">
-        <h1> {{title}} </h1>
+        <h1 :style="{
+          color: inputValue.length < 5 ? 'red' : 'green',
+          fontSize: inputValue.length < 6 ? '2rem' : '1rem'
+        }"> {{title}} </h1>
         <div>
          <div class="form-control">
-           <input type="text" v-bind:placeholder="placeholderString " v-bind:value="inputValue"
-           v-on:input="inputChangeHandler"
-           v-on:keypress.enter="addNewNote"
+           <input type="text" 
+           :placeholder="placeholderString" 
+           //:value="inputValue"
+           //@input="inputChangeHandler"
+           v-model="inputValue"
+           @keypress.enter="addNewNote"
            />
-           <button class="btn" v-on:click="addNewNote">Добавить</button>
+           <button class="btn" @click="addNewNote">Добавить</button>
            <hr>
            <ul class="list" v-if="notes.length !== 0">
              <li class="list-item" v-for="(note, idx) in notes">
-               ({{idx +1}}) {{note}} 
-               <button class="btn danger" v-on:click="removeNote(idx)">Удалить</button>
+               <!-- <span :class="note.length > 5 ? 'primary' : 'bold' ">({{idx +1}}) {{toUpperCase(note)}} </span> -->
+               <!-- <span :class="{
+                 'primary' : true,
+                 'bold': note.length > 5
+               } ">({{idx +1}}) {{toUpperCase(note)}} </span> -->
+               <span :class="['bold', {'primary': note.length > 5}] ">({{idx +1}}) {{toUpperCase(note)}} </span>
+               <button class="btn danger" @click="removeNote(idx)">Удалить</button>
               </li>
+              <hr>
+              <li><strong>Общее количество:{{notes.length}} </strong> | Удвоенное:{{doubleCountComputed}} </li>
             </ul>
             <div v-else>Заметок нет. Добавьте заметку</div>
          </div>
