--- a/index.html
+++ b/index.html
@@ -5,41 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="theme.css" />
-    <title>Основы vue</title>
+    <style>
+      [v-cloak] {
+        display: none;
+      }
+    </style>
+    <title>Counter</title>
   </head>
   <body>
-    <div class="container" id="app">
-      <div class="card">
-        <h1 :style="{
-          color: inputValue.length < 5 ? 'red' : 'green',
-          fontSize: inputValue.length < 6 ? '2rem' : '1rem'
-        }"> {{title}} </h1>
-        <div>
-         <div class="form-control">
-           <input type="text" 
-           :placeholder="placeholderString" 
-           //:value="inputValue"
-           //@input="inputChangeHandler"
-           v-model="inputValue"
-           @keypress.enter="addNewNote"
-           />
-           <button class="btn" @click="addNewNote">Добавить</button>
-           <hr>
-           <ul class="list" v-if="notes.length !== 0">
-             <li class="list-item" v-for="(note, idx) in notes">
-               <!-- <span :class="note.length > 5 ? 'primary' : 'bold' ">({{idx +1}}) {{toUpperCase(note)}} </span> -->
-               <!-- <span :class="{
-                 'primary' : true,
-                 'bold': note.length > 5
-               } ">({{idx +1}}) {{toUpperCase(note)}} </span> -->
-               <span :class="['bold', {'primary': note.length > 5}] ">({{idx +1}}) {{toUpperCase(note)}} </span>
-               <button class="btn danger" @click="removeNote(idx)">Удалить</button>
-              </li>
-              <hr>
-              <li><strong>Общее количество:{{notes.length}} </strong> | Удвоенное:{{doubleCountComputed}} </li>
-            </ul>
-            <div v-else>Заметок нет. Добавьте заметку</div>
-         </div>
+    <div class="container pt-5" id="app" v-cloak>
+      <div class="card center">
+        <div v-html="myHtml"></div>
+        <!-- <h2 v-text="title"></h2>
+        <h2 v-once>{{title}}</h2>
+        <h2 v-pre>{{title}}</h2>
+        <button class="btn" @click="title = 'Заголовок после изменения'">
+          Изменить название
+        </button> -->
+
+        <div class="form-control">
+          <input
+            type="text"
+            @keyup.shift.enter.exact="addItem($event)"
+            ref="myInput"
+          />
+        </div>
+        <ul class="list" v-if="items.length">
+          <!-- <li class="list-item" v-for="(item, i) in 7">
+            <strong>index {{i}} - </strong> {{item}}
+          </li> -->
+          <!-- <li class="list-item" v-for="(value, key) in person">
+            <strong>{{key}} </strong>{{value}}
+          </li> -->
+          <li
+            class="list-item"
+            v-for="(item, i) in items"
+            @click.right.prevent="remove(i), log(item)"
+            :key="item"
+          >
+            <strong> {{item}} </strong>&nbsp;
+            <!-- <input type="text" @click="stopPropagation" /> -->
+            <input type="text" @click.stop />
+          </li>
+        </ul>
+        <h3 v-show="items.length === 0">Элементов нет</h3>
       </div>
     </div>
 
